[package]
name = "xt-frontend-gtk"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
license = "MIT OR Apache-2.0"

[lib]
name = "xt_frontend_gtk"
path = "src/lib.rs"

[[bin]]
name = "xtg"
path = "src/bin/xt-gtk.rs"

[dependencies]
gio = "0.18.1"
gdk = "0.17.1"

[dependencies.gtk]
version = "0.17.1"
features = ["v3_24"]

[dependencies.clippy]
version = "0.0.302"
optional = true

[dependencies.clap]
version = "4.3.19"
features = ["suggestions", "color", "wrap_help"]

[profile.release]
lto = true

